# panmesh

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/: SCRUM.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  user_story.yml
.github/workflows/: ci.yml
docs/: spike-rust-crate-evaluation.md
docs/decisions/: 0000-use-markdown-architectural-decision-records.md  0001-use-vtkio-for-vtk-vtu-parsing.md  0002-use-quick-xml-for-xml-based-formats.md  0003-use-hdf5-for-xdmf-heavy-data.md  0004-use-hybrid-approach-for-gmsh-msh-parsing.md  README.md
src/: lib.rs  vtk.rs
tests/: test_roundtrip.py
