[package]
name = "panmesh"
version = "0.1.0"
edition = "2021"
description = "A Rust-based meshio Python package"
license = "MIT"
repository = "https://github.com/tkoyama010/panmesh"
keywords = ["mesh", "meshio", "python", "pyo3"]
categories = ["science"]

[lib]
name = "panmesh"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
