[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "panmesh"
description = "A Rust-based meshio Python package"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["mesh", "meshio", "fem"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[dependency-groups]
test = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/tkoyama010/panmesh"
Repository = "https://github.com/tkoyama010/panmesh"
Issues = "https://github.com/tkoyama010/panmesh/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
